--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -1,4 +1,5 @@
 @import "constans.scss";
+@import "callouts.scss";
 
 body{
 	font-size: $font-size
@@ -13,3 +14,6 @@ body{
 	border:1px solid red;
 	height: 800px; 
 }
+
+
+
