GeoJson builder was added.  It takes GeoNames results and transform the data into GeoJson format. Added a dynamic GeoJson layer which extends from react-leaflet path component but supports updateable data, More code organizations (Settings and Constants)

--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -65,3 +65,10 @@ body{
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
 }
+
+#locations {
+  .list{
+    max-height: 500px;
+    overflow-y:auto;
+  }
+}
