--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -17,71 +17,58 @@ body{
 
 
 .form-inline .form-group{
-  margin-left: 0 !important;
-  margin-right: 0 !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
 }
 
-.spacing{
-  margin-left: 5px !important;
-}
-
-
-.leaflet-container {
-  height: 600px;
-  width: 100%;
-  margin: 0 auto;
+ .spacing{
+	 margin-left: 5px !important;
 }
 
 
+ .leaflet-container {
+        height: 600px;
+        width: 100%;
+        margin: 0 auto;
+}
 
+#locations {
+	position: absolute;
+	left: 20px;
+	top: 200px;
+	width: 250px;
+	z-index: 100;
+
+}
+ 
 .opacity-10 {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=10);
   opacity: 0.1;
 }
-
+ 
 .opacity-20 {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
   opacity: 0.2;
 }
-
+ 
 .opacity-50 {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
   opacity: 0.5;
 }
-
+ 
 .opaque {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
-
+ 
 .transparent {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
 }
 
-.grid{
-  #locations {
-    .list{
-      overflow-y:auto;
-      max-height: 100%;
-      margin-bottom: 10px;
-      min-height: 300px;
-    }
+#locations {
+  .list{
+    max-height: 500px;
+    overflow-y:auto;
   }
 }
-
-.fixed{
-
-  #locations {
-    position: absolute;
-    z-index: 100;
-    top:150px;
-    width: 300px;
-    .list{
-      max-height:500px;
-      overflow: auto; 
-    }
-  }
-
-}
-
