--- a/app/stylesheets/app2.css
+++ b/app/stylesheets/app2.css
@@ -1,11 +1,13 @@
 @import "constans.scss";
 @import "callouts.scss";
 
-
 body{
-	font-size: $font-size;
+	font-size: $font-size
 }
 
+.active{
+	color:#CCC
+}
 
 
 #map1{
@@ -24,56 +26,27 @@ body{
 }
 
 
- .leaflet-container {
-        height: 600px;
-        width: 100%;
-        margin: 0 auto;
-}
-
+ 
 #locations {
-
 	position: absolute;
-	right: 10px;
-	top: 150px;
-	width: 280px;
+	left: 20px;
+	top: 200px;
+	width: 250px;
 	z-index: 100;
-	
-	.location {
-		cursor: pointer;
-	}
-	
-	.location:hover {
-		background-color: #eee;
-	}
-	
-	.list-group-item {
-		padding: 10px;
-	}
-	
-	.location-item {
-		font-size: 0.9em;
-	}
-}
 
+}
 
 #project-info {
-
 	position: absolute;
-	left: 10px;
-	top: 80px;
+	right: 20px;
+	top: 100px;
 	width: 500px;
 	z-index: 99;
 }
 
 .handle {
 	cursor: move;
-	font-family: 'Roboto', sans-serif;
 }
-
-.small-heading {
-	font-size: 0.8em ! important;
-}
-	
  
 .opacity-10 {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=10);
@@ -110,23 +83,21 @@ body{
 
 .popup{
     width:430px;
-    min-width: 200px;
     padding: 10px;
     margin: 5px 0;
     padding-right: 10px;
     border: 1px solid #f0ad4e;
     border-left-width: 5px;
     border-radius: 3px;
-  
-
 
   button{
       margin-right:15px;
   }
-  h4 {
-      color: #f0ad4e;
-  }
 
+    h4{
+      color:#f0ad4e;
+    }
+ 
   p {
     margin: 2px;
     padding:2px;
