--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -10,7 +10,7 @@ body{
 
 #map1{
 
-	height: 100%; 
+	height: 90%; 
 
    .text{
       position: relative;
@@ -279,4 +279,10 @@ p {
   label{
     color:#a94442;
   }
+}
+
+
+.navbar{
+
+  margin-bottom:0px !important
 }
