--- a/app/stylesheets/layerControl.scss
+++ b/app/stylesheets/layerControl.scss
@@ -3,7 +3,7 @@
   width: 250px;
   background-color: #fff;
   position: absolute;
-  top: 35px;
+  bottom: 35px;
   right: 10px;
   padding:0;
   z-index: 10;
@@ -31,6 +31,7 @@
   overflow-y: auto;
   background-color: #fff;
   position: absolute;
+   bottom: 50px;
   padding:6px 6px 4px 6px ;
   border:1px solid;
 }
