--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -168,6 +168,20 @@ body{
 }
 
 
+.popupNew{
+  @extend .popup;
+    border: 1px solid rgba(169, 171, 169, 0.8) !important;
+    h4 {
+      color: rgba(169, 171, 169, 0.8) !important;
+    }
+  }
+
+
+.popupCoded{
+  @extend .popup;
+    border: 1px solid #e0952c !important;
+  }
+
 .popup{
   width:430px;
   min-width: 200px;
@@ -175,11 +189,9 @@ body{
   margin: 5px 0;
   padding-right: 10px;
   border: 1px solid #f0ad4e;
-  border-left-width: 5px;
+  border-left-width: 5px !important;
   border-radius: 3px;
   
-
-
   button{
     margin-right:15px;
   }
@@ -193,24 +205,14 @@ body{
   }
 }
 
-.popup.new{
-  border: 1px solid rgba(169, 171, 169, 0.8);
-  border-left-width: 5px;
-  border-radius: 3px;
-  
 
-
-  button{
-    margin-right:15px;
-  }
-  h4 {
-    color: rgba(169, 171, 169, 0.8);
-  }
-
-  p {
-    margin: 2px;
-    padding:2px;
-  }
+.submit-container{
+  width: 100px;
+  position: absolute;
+  top: 20px;
+  right: 100px;
+  padding:0;
+  z-index: 10;
 }
 
 .dataEntryEdition {
