Countries layers refactoring, now layers are stored in separate data objects, the country layer class was update to support the new data model, as well the query feature method

--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -207,12 +207,14 @@ body{
 
 
 .submit-container{
-  width: 100px;
   position: absolute;
-  top: 20px;
-  right: 100px;
+  bottom: 30px;
+  right: 20px;
   padding:0;
-  z-index: 10;
+  z-index: 10000;
+  .btn{
+    margin: 3px;
+  }
 }
 
 .dataEntryEdition {
