--- a/app/stylesheets/control.layers.minimap.css
+++ b/app/stylesheets/control.layers.minimap.css
@@ -1,5 +1,10 @@
+.leaflet-control-layers-expanded{
+	width: 950px !important;
+	height:380px
+}
+
 .leaflet-control-layers-expanded.leaflet-control-layers-minimap {
-	width: 200px;
+	width: 250px;
 	background: rgba(255, 255, 255, 0.85);
 	box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 
@@ -13,29 +18,56 @@
 	margin-bottom: 2px;
 	position: relative;
 	display: block;
-	height: 70px;
-	
+	height: 150px;
+	width: 300px;
+	float: left;
+	margin: 3px;	
 }
 
-.leaflet-minimap-container .leaflet-minimap-label {
-	position: absolute;
-	display: block;
-	height: 22px;
-	bottom: 0;
-	left: 0;
-	padding: 1px 5px 5px 3px;
-	background-color: rgba(72, 142, 60, 0.7);
-	color: white;
-	white-space: nowrap;
-	z-index: 1000;
-	width: 100%;
-	
-	.disabled{
-			background-color: rgba(72, 142, evdbd60, 0.7);
 
-	}
-
+.leaflet-minilayer-container {
+	display: flex;
+	text-align: center;
+	margin-bottom: 2px;
+	position: relative;
+	height: 150px;
+	width: 300px;
+	float: left;
+	margin: 3px;
+	background-color: rgba(181, 208, 208,0.7) !important;
 }
+.leaflet-minimap-label {
+    position: absolute;
+    display: block;
+    height: 40px;
+    bottom: 0;
+    left: 0;
+    padding: 1px 5px 5px 3px;
+    background-color: rgba(51, 51, 51, 0.55);
+    color: white;
+    white-space: nowrap;
+    z-index: 1000;
+    width: 100%;
+    text-align: left;
+    vertical-align: middle;
+    padding-top: 7px;
+    font-size: 16px;
+    color: #F1F1F1;
+    font-family: roboto,sans-serif;
+    font-weight: 100;
+}
+
+
+
+
+
+
+.leaflet-minilayer-comment{
+	padding-top: 40px;
+}
+
+
+
 .leaflet-minimap-container .leaflet-minimap-label .leaflet-control-layers-selector {
 	top: 3px;
 }
@@ -47,10 +79,17 @@
 	display: none;
 }
 
-.leaflet-minimap-title{
-	border-radius: 5px;
-	font-size: 14px;
-	font-weight: bold;
-	background-color: #EEEEEE;
-	padding: 3px;
+.leaflet-minimap-title {
+  	clear: both;
+    border-radius: 5px;
+    padding: 3px;
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+  
+    font-size: 18px;
+    font-weight: 500;
+    font-family: Roboto, sans-serif;
+    padding: 5px;
+    line-height: 19.8px;
 }
