--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -430,3 +430,16 @@ p {
   position:absolute;
   z-index:1000000;
 }
+
+
+
+.dropdown-menu > li > p {
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: normal;
+    line-height: 1.42857143;
+    color: #333;
+    white-space: nowrap;
+   margin-bottom: 0px;
+}
