OAGC-74 Data entry form now allows users to select the source of the admin codes

--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -480,3 +480,14 @@ p {
     white-space: nowrap;
    margin-bottom: 0px;
 }
+
+
+.mini{
+    margin-left:15px;
+    margin-top: -5px;
+    margin-bottom: 2px;
+    font-size: 70%;
+    button{
+      font-size:80%;
+    }
+}
