--- a/app/stylesheets/callouts.scss
+++ b/app/stylesheets/callouts.scss
@@ -1,5 +1,5 @@
 .bs-callout {
-  padding: 20px;
+    padding: 0px 0px 0px 20px;
   margin: 20px 0;
   border: 1px solid #eee;
   border-left-width: 5px;
@@ -12,7 +12,6 @@
     position: absolute;
     color: #FFF;
     padding: 1px 4px 1px 4px;
-    margin-top: -20px;
     font-family: monospace;
   }
 }
@@ -60,15 +59,15 @@
 
 
 .bs-callout-success {
-  border-left-color: #5cb85c;
+  border-left-color: #669933;
   .text-vertical{
-    background-color: #5cb85c;
+    background-color: #669933;
   }
-  a { color: #5cb85c};
-  a:hover{color:#5cb85c};
+  a { color: #669933};
+  a:hover{color:#669933};
 }
 .bs-callout-success h4 {
-  color: #5cb85c;
+  color: #669933;
 }
 
 .bs-callout-danger {
