Info tab is now a a map control

--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -325,11 +325,6 @@ label{
 
 
 #project-info {
-
-	position: absolute;
-	left: 10px;
-	top: 80px;
-	width: 500px;
-	max-height: 600px;
+	max-width:350px;
 	z-index: 99;
 }
