--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -63,6 +63,7 @@ $small:9px;
 @import "forms.scss";
 
 /*ui modules*/
+@import 'project-list.scss';
 @import 'header.scss';
 @import 'project-info.scss';
 @import 'search.scss';
