--- a/app/stylesheets/forms.scss
+++ b/app/stylesheets/forms.scss
@@ -1,9 +1,19 @@
 
 /*Forms*/
+@mixin inputText(){
+	@include fontDefault($regular,$black);
+	height:22px;
+	@include grayBorder();
+	color:$black; 
+}
+
+
 
 input[type="text"]  {
 	@include inputText();
 	font-weight: bold;
+	padding:5px;
+
 }
 
 
@@ -51,7 +61,7 @@ input[type="checkbox"]:checked+label:before{
 	@include grayBorder();
 	display: block;
 	width: 100%;
-	height: 22px;
+	height: 24px;
 	padding: 2px 2px;
 	line-height: 1.42857143;
 	color: #555;
@@ -64,5 +74,15 @@ input[type="checkbox"]:checked+label:before{
 label{
 	@include fontDefault($regular,$darkGray);
 	font-weight: 100;
-	padding:10px 0px 10px 0px;
+	padding:3px 0px;
+}
+
+
+.form-control[disabled], fieldset[disabled] .form-control {
+    cursor: not-allowed;
+}
+.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
+    background-color: #FFF;
+    color:#EEE;
+    opacity: 1;
 }
