map control updates

--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -241,3 +241,11 @@ h4{
 		border-bottom: 1px solid #eee;
 	}
 }
+
+
+.leaflet-control-actions-buttons{
+	float: left;
+	position: relative;
+	bottom: 1px;
+	border: 1px solid red;	
+}
