fix css for help

--- a/app/stylesheets/data-entry.scss
+++ b/app/stylesheets/data-entry.scss
@@ -80,3 +80,11 @@
     	border-width: 2px;
 	}
 }
+
+#noneditablefields{
+	margin-right: -15px;
+    margin-left: -15px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
