--- a/app/stylesheets/forms.scss
+++ b/app/stylesheets/forms.scss
@@ -86,3 +86,12 @@ label{
     color:#EEE;
     opacity: 1;
 }
+
+.modal{
+  display:block;
+  .introjs-fixParent{
+   	left: 0px !important;
+   	top: 0px !important;
+   	right: 0px !important;
+ 	}
+}
