--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -69,8 +69,7 @@ $gray:rgb(243,243,243);
 @import "data-entry.scss";
 
 @import "callouts.scss";
-
-
+@import "intro.scss";
 
 body{
 	@include fontDefault($regular,$black);
@@ -248,7 +247,7 @@ h4{
 	position: relative;
 	top: 57px;
 	display: inline;
-	right: 40px;
+	right: 60px;
 
 	.help {
 		position: relative;
@@ -266,7 +265,9 @@ h4{
 		height: 40px;
 	}
 }
-
+.leaflet-control-actions-buttons.introjs-fixParent{
+	top: 5px!important;
+}
 
 .leaflet-control-layer-selector{
 	.countries-list{
@@ -287,4 +288,9 @@ h4{
 	.btn{
 		margin-top: 7px;
 	}
+}
+
+
+.leaflet-control-layer-selector.introjs-fixParent{
+	position: relative !important;
 }
