--- a/app/stylesheets/markers.scss
+++ b/app/stylesheets/markers.scss
@@ -55,7 +55,7 @@
 }
 
 .geocoding-marker-deleted {
-  ackground-color: rgba(217, 83, 79, 0.8);
+  background-color: rgba(217, 83, 79, 0.8);
   box-shadow: 0 0 4px 3px rgba(255, 255, 255, 0.6), 0 0 0 4px rgb(178, 34, 34), 0 0 0 8px rgba(255, 18, 5, 0.24);
 
 
