--- a/app/stylesheets/project-list.scss
+++ b/app/stylesheets/project-list.scss
@@ -25,6 +25,13 @@
 	.list-group{
 		padding:10px;
 	}
+
+	.bs-callout-info {
+    border-left-color: #5bc0de;
+    min-height: 100px;
+	}
+
+
 }
 
 /*Pagination*/
